[package]
name = "images_sort"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kamadak-exif = "0.5"
clap = { version = "4.4", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
chrono = "0.4"
anyhow = "1.0"
reverse_geocoder = "3.0"
once_cell = "1.18"