[package]
name = "images_sort"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true  # Enable debug symbols for profiling in release mode

[dependencies]
kamadak-exif = "0.6"
clap = { version = "4.5", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
chrono = "0.4"
eyre = "0"
thiserror = "2"
reverse_geocoder = "4"
once_cell = "1.21"
regex = "1"
indicatif = "0"
rand = "0.9"
lru = "0.12"
rayon = "1.10"